// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to override target node version 1`] = `
{
  "plugins": [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-dynamic-import-node/lib/index.js",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "node >= 20",
        ],
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;

exports[`should provide node preset as expected 1`] = `
{
  "plugins": [
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
    "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
      {
        "proposal": "minimal",
      },
    ],
    "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-dynamic-import-node/lib/index.js",
  ],
  "presets": [
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
      {
        "exclude": [
          "transform-typeof-symbol",
        ],
        "modules": "commonjs",
        "targets": [
          "node >= 14",
        ],
      },
    ],
    [
      "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
      {
        "allExtensions": true,
        "allowDeclareFields": true,
        "allowNamespaces": true,
        "isTSX": true,
        "optimizeConstEnums": true,
      },
    ],
  ],
}
`;
